# Skillswap-x-XLM

./: .gitignore  ARCHITECTURE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vercel.html
.github/workflows/: ci.yml
backend/: db.js  package-lock.json  package.json  server.js  skillswap.db-shm  skillswap.db-wal
backend/middleware/: auth.js
backend/routes/: auth.js  exchanges.js  transactions.js  users.js
contracts/: Cargo.toml
contracts/.cargo/: config.toml
contracts/skill_swap/: Cargo.toml
contracts/skill_swap/src/: lib.rs
contracts/skill_swap/test_snapshots/tests/: test_book_and_confirm_session.1.json  test_cancel_listing.1.json  test_list_and_complete_swap.1.json  test_reputation.1.json  test_team_join_and_leave.1.json
src/: App.css  App.jsx  index.css
src/components/: AuthModal.jsx  BgBlobs.jsx  Footer.jsx  Navbar.jsx
src/pages/: DashboardPage.jsx  LandingPage.jsx  LearnPage.jsx  ProfilePage.jsx  SkillExchangePage.jsx  TeamFormationPage.jsx
src/services/: api.js  contract.js
