[package]
name = "skill-swap"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { version = "21.7.7" }

[dev-dependencies]
soroban-sdk   = { version = "21.7.7", features = ["testutils"] }
ed25519-dalek = "2"
serde_json    = "1"
rand          = "0.8"

[features]
testutils = ["soroban-sdk/testutils"]
